xray/dev/2026-02-07/firewall_rules.txt
-P INPUT ACCEPT
-P FORWARD DROP
-P OUTPUT ACCEPT
-N DOCKER
-N DOCKER-BRIDGE
-N DOCKER-CT
-N DOCKER-FORWARD
-N DOCKER-ISOLATION-STAGE-1
-N DOCKER-ISOLATION-STAGE-2
-N DOCKER-USER
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER -d 172.18.0.30/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.17/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.24/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.23/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.21/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.18/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.19/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.10/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.15/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.13/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 3306 -j ACCEPT
-A DOCKER -d 172.18.0.14/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.12/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 15672 -j ACCEPT
-A DOCKER -d 172.18.0.12/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 5672 -j ACCEPT
-A DOCKER -d 172.18.0.11/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 3000 -j ACCEPT
-A DOCKER -d 172.18.0.9/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8090 -j ACCEPT
-A DOCKER -d 172.18.0.8/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.7/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.5/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 3000 -j ACCEPT
-A DOCKER -d 172.18.0.4/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.3/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-541af554c75c -o br-541af554c75c -p tcp -m tcp --dport 3000 -j ACCEPT
-A DOCKER ! -i br-541af554c75c -o br-541af554c75c -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o br-541af554c75c -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o br-541af554c75c -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-ISOLATION-STAGE-1
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-541af554c75c -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-541af554c75c ! -o br-541af554c75c -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-541af554c75c -j DROP
